support for stereo cameras

--- a/src/camera/Makefile
+++ b/src/camera/Makefile
@@ -3,16 +3,16 @@ OBJSC=$(patsubst %.c,%.o,$(wildcard *.c))
 OBJS+=$(OBJSC)
 
 include ../Mk/local.Mk
-CXXINCLUDE+=-I./  -I../common 
+CXXINCLUDE+=-I./ -I../  -I../common
 CXXFLAGS+=-Wall
 
 all: $(OBJS)
 
 .cpp.o:
-	$(CXX)  $(CXXFLAGS) $(CXXDEFINE) -c  $(CXXINCLUDE) $< 
+	$(CXX)  $(CXXFLAGS) $(CXXDEFINE) -c  $(CXXINCLUDE) $<
 
 .c.o:
-	$(CC)  $(FLAGS) $(CXXDEFINE) -c  $(CXXFLAGS) $(CXXINCLUDE) $< 
+	$(CC)  $(FLAGS) $(CXXDEFINE) -c  $(CXXFLAGS) $(CXXINCLUDE) $<
 
 clean:
 	$(RM) $(OBJS)
